// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HoverOverlay > actions and hover empty 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <small
        class="hoverEmpty"
      >
        No hover information available.
      </small>
    </div>
    <div
      class="actionsContainer"
    />
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > actions and hover error 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <div
        aria-live="polite"
        class="hoverError"
        role="alert"
      >
        M2
      </div>
    </div>
    <div
      class="actionsContainer"
    />
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > actions and hover loading 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents hoverOverlayContentsLoading"
      data-testid="hover-overlay-contents"
    >
      <div
        class="loaderRow"
      >
        <div
          aria-label="Loading"
          aria-live="polite"
          class="mdi-icon loadingSpinner"
          data-loading-spinner="true"
          role="img"
        />
      </div>
    </div>
    <div
      class="actionsContainer"
    />
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > actions and hover present 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <span
        class="hoverOverlayContent hoverOverlayContent test-tooltip-content"
        data-testid="hover-overlay-content"
      >
        <p>
          v
        </p>
      </span>
    </div>
    <div
      class="actionsContainer"
    >
      <div
        class="actions"
      >
        <div
          class="actionsInner"
        >
          <button
            class="test-action-item action test-tooltip-untitled"
            type="button"
          >
              
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > actions and hover undefined 1`] = `<DocumentFragment />`;

exports[`HoverOverlay > actions empty 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    />
    <div
      class="actionsContainer"
    />
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > actions error 1`] = `<DocumentFragment />`;

exports[`HoverOverlay > actions error, hover present 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <span
        class="hoverOverlayContent hoverOverlayContent test-tooltip-content"
        data-testid="hover-overlay-content"
      >
        <p>
          v
        </p>
      </span>
    </div>
    <div
      class="actionsContainer"
    />
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > actions loading 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    />
    <div
      class="actionsContainer"
    />
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > actions present 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    />
    <div
      class="actionsContainer"
    >
      <div
        class="actions"
      >
        <div
          class="actionsInner"
        >
          <button
            class="test-action-item action test-tooltip-some-title"
            type="button"
          >
             Some title 
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > actions present, hover loading 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents hoverOverlayContentsLoading"
      data-testid="hover-overlay-contents"
    >
      <div
        class="loaderRow"
      >
        <div
          aria-label="Loading"
          aria-live="polite"
          class="mdi-icon loadingSpinner"
          data-loading-spinner="true"
          role="img"
        />
      </div>
    </div>
    <div
      class="actionsContainer"
    >
      <div
        class="actions"
      >
        <div
          class="actionsInner"
        >
          <button
            class="test-action-item action test-tooltip-untitled"
            type="button"
          >
              
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > hover empty 1`] = `<DocumentFragment />`;

exports[`HoverOverlay > hover error 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <div
        aria-live="polite"
        class="hoverError"
        role="alert"
      >
        M
      </div>
    </div>
    <div
      class="actionsContainer"
    />
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > hover error, actions present 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <div
        aria-live="polite"
        class="hoverError"
        role="alert"
      >
        M
      </div>
    </div>
    <div
      class="actionsContainer"
    >
      <div
        class="actions"
      >
        <div
          class="actionsInner"
        >
          <button
            class="test-action-item action test-tooltip-untitled"
            type="button"
          >
              
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > hover loading 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents hoverOverlayContentsLoading"
      data-testid="hover-overlay-contents"
    >
      <div
        class="loaderRow"
      >
        <div
          aria-label="Loading"
          aria-live="polite"
          class="mdi-icon loadingSpinner"
          data-loading-spinner="true"
          role="img"
        />
      </div>
    </div>
    <div
      class="actionsContainer"
    />
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > hover present 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <span
        class="hoverOverlayContent hoverOverlayContent test-tooltip-content"
        data-testid="hover-overlay-content"
      >
        <p>
          v
        </p>
      </span>
    </div>
    <div
      class="actionsContainer"
    />
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > hover present, actions loading 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <span
        class="hoverOverlayContent hoverOverlayContent test-tooltip-content"
        data-testid="hover-overlay-content"
      >
        <p>
          v
        </p>
      </span>
    </div>
    <div
      class="actionsContainer"
    />
  </div>
</DocumentFragment>
`;

exports[`HoverOverlay > multiple hovers present 1`] = `
<DocumentFragment>
  <div
    class="card hoverOverlay"
    data-testid="hover-overlay"
    style="opacity: 1; visibility: visible; left: 0px; top: 0px;"
  >
    <div
      class="hoverOverlayContents"
      data-testid="hover-overlay-contents"
    >
      <span
        class="hoverOverlayContent hoverOverlayContent test-tooltip-content"
        data-testid="hover-overlay-content"
      >
        <p>
          v
        </p>
      </span>
      <hr />
      <span
        class="hoverOverlayContent hoverOverlayContent test-tooltip-content"
        data-testid="hover-overlay-content"
      >
        <p>
          v2
        </p>
      </span>
    </div>
    <div
      class="actionsContainer"
    />
  </div>
</DocumentFragment>
`;
